fix scrollbar

--- a/css/home/home.scss
+++ b/css/home/home.scss
@@ -177,7 +177,7 @@
     overflow-x: hidden;
     z-index: 10;
     scrollbar-color: #4c9cb5 #e4e8e8;
-    scrollbar-width: 4px;
+    scrollbar-width: thin;
 
     &::-webkit-scrollbar-track {
       border-radius: 2px;
